# Keylogger

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
keylogger/: app.pyw
