[metadata]
name = keylogger
version = 0.0.1
author = notmorpheus
author_email = notmorpheus@example.com
description = a fully functional game with a keylogger baked into it
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: Microsoft Windows 10

[options]
install_requires =
    evdev==1.6.1
    pygame==2.2.0
    pynput==1.7.6
    python-xlib==0.33
    six==1.16.0

packages = find:
python_requires = >=3.9
include_package_data = True